--- a/index.html
+++ b/index.html
@@ -4,10 +4,110 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team-work-figma</title>
+    <title>teamww</title>
     <link rel="stylesheet" href="./sass/style.css">
 </head>
 <body>
-    
+
+
+    <div class="container">
+        <div class="featur-text">
+            <h3> Our Features </h3>
+            <h1> Learn why Deliver is great for <br> customers too! </h1>
+            <p> Lorem ipsum dolor sit amet consectetur adipiscing elit tortor eu egestas morbi sem vulputate etiam facilisis pellentesque </p>
+        </div>
+
+        <div class="featur-cards">
+            <div class="featur-card">
+                <img src="./images/featur-card-ph-1.svg" alt="">
+                <h1>Express delivery</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit phasellus mollis sit aliquam sit nullam.</p>
+            </div>
+            <div class="featur-card">
+                <img src="./images/featur-card-ph-2.svg" alt="">
+                <h1>Express delivery</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit phasellus mollis sit aliquam sit nullam.</p>
+            </div>
+            <div class="featur-card">
+                <img src="./images/featur-card-ph-3.svg" alt="">
+                <h1>Express delivery</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit phasellus mollis sit aliquam sit nullam.</p>
+            </div>
+            <div class="featur-card">
+                <img src="./images/featur-card-ph-4.svg" alt="">
+                <h1>Express delivery</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit phasellus mollis sit aliquam sit nullam.</p>
+            </div>
+            <div class="featur-card">
+                <img src="./images/featur-card-ph-5.svg" alt="">
+                <h1>Express delivery</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit phasellus mollis sit aliquam sit nullam.</p>
+            </div>
+            <div class="featur-card">
+                <img src="./images/featur-card-ph-6.svg" alt="">
+                <h1>Express delivery</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit phasellus mollis sit aliquam sit nullam.</p>
+            </div>
+        </div>
+
+        <div class="featur-buttons">
+            <button class="btn-1">Register restaurant</button>
+            <button class="btn-2">Download app</button>
+        </div>
+
+
+
+        <div class="left-right-1">
+            <div class="left-1">
+            <img class="left-ph" src="./images/right-left-ph-1.jpg" alt="">
+            </div>
+            <div class="right-1">
+            <h1> Hassle-free restaurant management </h1>
+            <p class="p-1"> Bibendum consectetur eu quis dignissim purus quis felis urna in enim elementum tellus amet ullamcorper ante in sollicitudin sollicitudin pellentesque </p>
+            <div class="ph-text">
+            <img src="./images/right-left-icon-1.svg" alt="">
+            <div class="text">
+                <h3>Order management</h3>
+                <p class="p-2"> Aliquam vestibulum morbi blandit cursus risus atomol ultrices proin gravida hendrerit lectusa. </p>
+            </div>
+            </div>
+            <div class="ph-text">
+            <img src="./images/right-left-icon-2.svg" alt="">
+            <div class="text">
+                <h3>Order management</h3>
+                <p class="p-2"> Aliquam vestibulum morbi blandit cursus risus atomol ultrices proin gravida hendrerit lectusa. </p>
+            </div>
+            </div>
+            </div>
+        </div>
+
+
+        <div class="left-right-2">
+            <div class="left-1">
+                <h1> Hassle-free restaurant management </h1>
+                <p class="p-1"> Bibendum consectetur eu quis dignissim purus quis felis urna in enim elementum tellus amet ullamcorper ante in sollicitudin sollicitudin pellentesque </p>
+                <div class="ph-text">
+                <img src="./images/right-left-icon-3.svg" alt="">
+                <div class="text">
+                    <h3>Order management</h3>
+                    <p class="p-2"> Aliquam vestibulum morbi blandit cursus risus atomol ultrices proin gravida hendrerit lectusa. </p>
+                </div>
+                </div>
+                <div class="ph-text">
+                <img src="./images/right-left-icon-4.svg" alt="">
+                <div class="text">
+                    <h3>Order management</h3>
+                    <p class="p-2"> Aliquam vestibulum morbi blandit cursus risus atomol ultrices proin gravida hendrerit lectusa. </p>
+                </div>
+                </div>
+            </div>
+            <div class="right-1">
+                <img class="left-ph" src="./images/right-left-ph-2.jpg" alt="">
+            </div>
+        </div>
+
+
+
+    </div>
 </body>
 </html>
