--- a/index.html
+++ b/index.html
@@ -1,113 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>teamww</title>
-    <link rel="stylesheet" href="./sass/style.css">
-</head>
-<body>
-
-
-    <div class="container">
-        <div class="featur-text">
-            <h3> Our Features </h3>
-            <h1> Learn why Deliver is great for <br> customers too! </h1>
-            <p> Lorem ipsum dolor sit amet consectetur adipiscing elit tortor eu egestas morbi sem vulputate etiam facilisis pellentesque </p>
+    <link rel="stylesheet" href="./sass/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <div class="card-1">
+      <div class="c-1__title">
+        <h3>
+          Learn why Deliver <br />
+          X is great for
+        </h3>
+        <span
+          >Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit
+          <br />
+          phasellus mollis sit aliquam sit nullam</span
+        >
+      </div>
+      <div class="c-1__content">
+        <div class="c-1__left-con">
+          <div class="c-1__left-c_chaild">
+            <img src="./icons/c-1 icon-1.svg" alt="icon" />
+            <h3>Fast deliveries</h3>
+            <p>Lorem ipsum dolor sit amet consecte</p>
+            <span>turole adipis.</span>
+          </div>
+          <div class="c-1__left-c_chaild">
+            <img src="./icons/c-1 icon-2.svg" alt="icon" />
+            <h3>Certified riders</h3>
+            <p>Lorem ipsum dolor sit amet consecte</p>
+            <span>turole adipis.</span>
+          </div>
+          <div class="c-1__left-c_chaild">
+            <img src="./icons/c-1 icon-3.svg" alt="icon" />
+            <h3>Instant payments</h3>
+            <p>Lorem ipsum dolor sit amet consecte</p>
+            <span>turole adipis.</span>
+          </div>
+          <div class="c-1__left-c_chaild">
+            <img src="./icons/c-1 icon-4.svg" alt="icon" />
+            <h3>Low fees</h3>
+            <p>Lorem ipsum dolor sit amet consecte</p>
+            <span>turole adipis.</span>
+          </div>
         </div>
-
-        <div class="featur-cards">
-            <div class="featur-card">
-                <img src="./images/featur-card-ph-1.svg" alt="">
-                <h1>Express delivery</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit phasellus mollis sit aliquam sit nullam.</p>
-            </div>
-            <div class="featur-card">
-                <img src="./images/featur-card-ph-2.svg" alt="">
-                <h1>Express delivery</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit phasellus mollis sit aliquam sit nullam.</p>
-            </div>
-            <div class="featur-card">
-                <img src="./images/featur-card-ph-3.svg" alt="">
-                <h1>Express delivery</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit phasellus mollis sit aliquam sit nullam.</p>
-            </div>
-            <div class="featur-card">
-                <img src="./images/featur-card-ph-4.svg" alt="">
-                <h1>Express delivery</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit phasellus mollis sit aliquam sit nullam.</p>
-            </div>
-            <div class="featur-card">
-                <img src="./images/featur-card-ph-5.svg" alt="">
-                <h1>Express delivery</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit phasellus mollis sit aliquam sit nullam.</p>
-            </div>
-            <div class="featur-card">
-                <img src="./images/featur-card-ph-6.svg" alt="">
-                <h1>Express delivery</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit phasellus mollis sit aliquam sit nullam.</p>
-            </div>
+        <div class="c-1__right-con">
+          <img src="./images/c-1 img-1.png" alt="img" />
         </div>
-
-        <div class="featur-buttons">
-            <button class="btn-1">Register restaurant</button>
-            <button class="btn-2">Download app</button>
-        </div>
-
-
-
-        <div class="left-right-1">
-            <div class="left-1">
-            <img class="left-ph" src="./images/right-left-ph-1.jpg" alt="">
-            </div>
-            <div class="right-1">
-            <h1> Hassle-free restaurant management </h1>
-            <p class="p-1"> Bibendum consectetur eu quis dignissim purus quis felis urna in enim elementum tellus amet ullamcorper ante in sollicitudin sollicitudin pellentesque </p>
-            <div class="ph-text">
-            <img src="./images/right-left-icon-1.svg" alt="">
-            <div class="text">
-                <h3>Order management</h3>
-                <p class="p-2"> Aliquam vestibulum morbi blandit cursus risus atomol ultrices proin gravida hendrerit lectusa. </p>
-            </div>
-            </div>
-            <div class="ph-text">
-            <img src="./images/right-left-icon-2.svg" alt="">
-            <div class="text">
-                <h3>Order management</h3>
-                <p class="p-2"> Aliquam vestibulum morbi blandit cursus risus atomol ultrices proin gravida hendrerit lectusa. </p>
-            </div>
-            </div>
-            </div>
-        </div>
-
-
-        <div class="left-right-2">
-            <div class="left-1">
-                <h1> Hassle-free restaurant management </h1>
-                <p class="p-1"> Bibendum consectetur eu quis dignissim purus quis felis urna in enim elementum tellus amet ullamcorper ante in sollicitudin sollicitudin pellentesque </p>
-                <div class="ph-text">
-                <img src="./images/right-left-icon-3.svg" alt="">
-                <div class="text">
-                    <h3>Order management</h3>
-                    <p class="p-2"> Aliquam vestibulum morbi blandit cursus risus atomol ultrices proin gravida hendrerit lectusa. </p>
-                </div>
-                </div>
-                <div class="ph-text">
-                <img src="./images/right-left-icon-4.svg" alt="">
-                <div class="text">
-                    <h3>Order management</h3>
-                    <p class="p-2"> Aliquam vestibulum morbi blandit cursus risus atomol ultrices proin gravida hendrerit lectusa. </p>
-                </div>
-                </div>
-            </div>
-            <div class="right-1">
-                <img class="left-ph" src="./images/right-left-ph-2.jpg" alt="">
-            </div>
-        </div>
-
-
-
+      </div>
+      <div class="c-1__buttons">
+        <button type="submit" class="c-1__btn-1">Register restaurant</button>
+        <button type="submit" class="c-1__btn-2">Download app</button>
+      </div>
     </div>
-</body>
+    <div class="card-2">
+      <div class="c-2__content">
+        <div class="c-2__left-con">
+          <h3>A delicious burger is one tap away!</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipiscing <br />
+            eli mattis sit phasellus mollis sit aliquam sit nullam
+          </p>
+          <button type="submit">Download app</button>
+        </div>
+        <div class="c-2__right-con">
+          <img src="./images/c-2 img-1.png" alt="img" />
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="featur-text">
+        <h3>Our Features</h3>
+        <h1>
+          Learn why Deliver is great for <br />
+          customers too!
+        </h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipiscing elit tortor eu
+          egestas morbi sem vulputate etiam facilisis pellentesque
+        </p>
+      </div>
+
+      <div class="featur-cards">
+        <div class="featur-card">
+          <img src="./images/featur-card-ph-1.svg" alt="" />
+          <h1>Express delivery</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit
+            phasellus mollis sit aliquam sit nullam.
+          </p>
+        </div>
+        <div class="featur-card">
+          <img src="./images/featur-card-ph-2.svg" alt="" />
+          <h1>Express delivery</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit
+            phasellus mollis sit aliquam sit nullam.
+          </p>
+        </div>
+        <div class="featur-card">
+          <img src="./images/featur-card-ph-3.svg" alt="" />
+          <h1>Express delivery</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit
+            phasellus mollis sit aliquam sit nullam.
+          </p>
+        </div>
+        <div class="featur-card">
+          <img src="./images/featur-card-ph-4.svg" alt="" />
+          <h1>Express delivery</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit
+            phasellus mollis sit aliquam sit nullam.
+          </p>
+        </div>
+        <div class="featur-card">
+          <img src="./images/featur-card-ph-5.svg" alt="" />
+          <h1>Express delivery</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit
+            phasellus mollis sit aliquam sit nullam.
+          </p>
+        </div>
+        <div class="featur-card">
+          <img src="./images/featur-card-ph-6.svg" alt="" />
+          <h1>Express delivery</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit
+            phasellus mollis sit aliquam sit nullam.
+          </p>
+        </div>
+      </div>
+
+      <div class="featur-buttons">
+        <button class="btn-1">Register restaurant</button>
+        <button class="btn-2">Download app</button>
+      </div>
+
+      <div class="left-right-1">
+        <div class="left-1">
+          <img class="left-ph" src="./images/right-left-ph-1.jpg" alt="" />
+        </div>
+        <div class="right-1">
+          <h1>Hassle-free restaurant management</h1>
+          <p class="p-1">
+            Bibendum consectetur eu quis dignissim purus quis felis urna in enim
+            elementum tellus amet ullamcorper ante in sollicitudin sollicitudin
+            pellentesque
+          </p>
+          <div class="ph-text">
+            <img src="./images/right-left-icon-1.svg" alt="" />
+            <div class="text">
+              <h3>Order management</h3>
+              <p class="p-2">
+                Aliquam vestibulum morbi blandit cursus risus atomol ultrices
+                proin gravida hendrerit lectusa.
+              </p>
+            </div>
+          </div>
+          <div class="ph-text">
+            <img src="./images/right-left-icon-2.svg" alt="" />
+            <div class="text">
+              <h3>Order management</h3>
+              <p class="p-2">
+                Aliquam vestibulum morbi blandit cursus risus atomol ultrices
+                proin gravida hendrerit lectusa.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="left-right-2">
+        <div class="left-1">
+          <h1>Hassle-free restaurant management</h1>
+          <p class="p-1">
+            Bibendum consectetur eu quis dignissim purus quis felis urna in enim
+            elementum tellus amet ullamcorper ante in sollicitudin sollicitudin
+            pellentesque
+          </p>
+          <div class="ph-text">
+            <img src="./images/right-left-icon-3.svg" alt="" />
+            <div class="text">
+              <h3>Order management</h3>
+              <p class="p-2">
+                Aliquam vestibulum morbi blandit cursus risus atomol ultrices
+                proin gravida hendrerit lectusa.
+              </p>
+            </div>
+          </div>
+          <div class="ph-text">
+            <img src="./images/right-left-icon-4.svg" alt="" />
+            <div class="text">
+              <h3>Order management</h3>
+              <p class="p-2">
+                Aliquam vestibulum morbi blandit cursus risus atomol ultrices
+                proin gravida hendrerit lectusa.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="right-1">
+          <img class="left-ph" src="./images/right-left-ph-2.jpg" alt="" />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
