--- a/index.html
+++ b/index.html
@@ -7,8 +7,105 @@
     <title>teamww</title>
     <link rel="stylesheet" href="./sass/style.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css-header/style.css" />
   </head>
   <body>
+    <header>
+      <img class="header-img" src="./images/deliver.png" alt="" />
+      <div class="header-text">
+        <p>Home</p>
+        <p>About</p>
+        <p>Pricing</p>
+        <p>Pages</p>
+        <p>Cart(0)</p>
+        <p>Download app</p>
+        <p>Register</p>
+      </div>
+    </header>
+    <div class="first-card">
+      <div class="card1">
+        <div class="card1__first-part">
+          <div class="card1__text-part">
+            <p>Food Delivery Service</p>
+            <p>Delicious food at your fingertips</p>
+            <p>
+              A ultricies eget condimentum sed faucibus enim maecenas variusd
+              dolor sitegestas hendrerit et maecenas habitant mattis
+            </p>
+          </div>
+          <div class="card1__button">
+            <p>Register restaurant</p>
+            <p>Download app</p>
+          </div>
+          <img class="rectangle" src="./images/Rectangle.png" alt="" />
+          <div class="card1__number">
+            <div class="card1__numbers">
+              <p>10M<span>+</span></p>
+              <p>500k<span>+</span></p>
+              <p>30M<span>+</span></p>
+            </div>
+            <div class="card1__number-text">
+              <p>Happy customers</p>
+              <p>Restaurants available</p>
+              <p>Successful deliveries</p>
+            </div>
+          </div>
+        </div>
+        <div class="card1__image-part">
+          <div class="backround-img">
+            <img class="browse" src="./images/browse.png" alt="" />
+          </div>
+        </div>
+      </div>
+      <p class="card1__button-text">
+        Trusted by 5,000+ restaurants around <span>the world</span>
+      </p>
+      <div class="card1__button-images">
+        <img src="./images/burger.png" alt="" />
+        <img src="./images/salad.png" alt="" />
+        <img src="./images/spoon.png" alt="" />
+        <img src="./images/watermelon.png" alt="" />
+      </div>
+    </div>
+    <div class="second-card">
+      <p>How it works</p>
+      <p>Our simple, yet efficient</p>
+      <p>delivery system</p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipiscing elit tortor eu egestas
+        morbi sem vulputate etiam facilisis pellentesque
+      </p>
+      <div class="second-card-cards">
+        <div class="second-cards-card1">
+          <img src="./images/phone.png" alt="" />
+          <p>1. Create a free account at Deliver X today</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit
+            phasellus mollis sit aliquam
+          </p>
+        </div>
+        <div class="second-cards-card2">
+          <img src="./images/restaurant.png" alt="" />
+          <p>2. Order from your favorite restaurant</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit
+            phasellus mollis sit aliquam
+          </p>
+        </div>
+        <div class="second-cards-card3">
+          <img src="./images/motorbike.png" alt="" />
+          <p>3. Receive right in your house, hassle-free</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit
+            phasellus mollis sit aliquam
+          </p>
+        </div>
+      </div>
+      <div class="card2__buttons">
+        <p>Register restaurant</p>
+        <p>Download app</p>
+      </div>
+    </div>
     <div class="card-1">
       <div class="c-1__title">
         <h3>
