--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./sass/style.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css-header/style.css" />
+    <link rel="stylesheet" href="./sass-2/style.css">
+    <link rel="stylesheet" href="./bootstrap-5.0.2-dist/css/bootstrap.min.css">
   </head>
   <body>
     <header>
@@ -306,5 +308,204 @@
         </div>
       </div>
     </div>
+    <!-- ! -->
+        <section class="section-muhammadimron">
+        <div class="container cont">
+            <div class="row rov">
+                <div class="col coll col-6 col-sm-6 col-md-6 colxl-6 col-xxl-6 ">
+                    <p class="col6p">
+                        What our clients say
+                    </p>
+                    <p class="col6p1">
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit semper dalar elementum tempus hac
+                        <span>tellus libero</span>
+                    </p>
+                </div>
+                <div class="col g-5 coll1 col-6 col-sm-6 col-md-6 colxl-6 col-xxl-6 ">
+                    <button class="col6btn1">
+                        Register restaurant
+                    </button>
+                    <button class="col6btn2">
+                        Download app
+                    </button>
+                </div>
+            </div>
+            <div class="row rov1">
+                <div class="col row1_item">
+                    <aside>
+                        <article>
+                            <img src="./img/pers-1_1x.jpg" srscet="./img/pers-1_x.jpg 2x" alt="">
+                            <span>
+                                <p class="spp1">John Carter</p>
+                                <p class="spp2">Echo Park</p>
+                            </span>
+                        </article>
+                        <img src="./img/white.svg" alt="">
+                    </aside>
+                    <p class="pcol">“Lorem ipsum dolor sit ametolil col consectetur adipiscing lectus a nunc mauris scelerisque</p>
+                </div>
+                <div class="col row1_item">
+                    <aside>
+                        <article>
+                            <img src="./img/pers-2_1x.jpg" srscet="./img/pers-2_x.jpg 2x" alt="">
+                            <span>
+                                <p class="spp1">Sophie Moore</p>
+                                <p class="spp2">Hollywood Hills</p>
+                            </span>
+                        </article>
+                        <img src="./img/white.svg" alt="">
+                    </aside>
+                    <p class="pcol">“Lorem ipsum dolor sit ametolil col consectetur adipiscing lectus a nunc mauris scelerisque</p>
+                </div>
+                <div class="col row1_item">
+                    <aside>
+                        <article>
+                            <img src="./img/pers-3_1x.jpg" srscet="./img/pers-3_x.jpg 2x" alt="">
+                            <span>
+                                <p class="spp1">Matt Cannon</p>
+                                <p class="spp2">Little Tokyo</p>
+                            </span>
+                        </article>
+                        <img src="./img/white.svg" alt="">
+                    </aside>
+                    <p class="pcol">“Lorem ipsum dolor sit ametolil col consectetur adipiscing lectus a nunc mauris scelerisque</p>
+                </div>
+            </div>
+            <div class="row rov1">
+                <div class="col row1_item">
+                    <aside>
+                        <article>
+                            <img src="./img/pers-1_1x.jpg" srscet="./img/pers-1_x.jpg 2x" alt="">
+                            <span>
+                                <p class="spp1">John Carter</p>
+                                <p class="spp2">Echo Park</p>
+                            </span>
+                        </article>
+                        <img src="./img/white.svg" alt="">
+                    </aside>
+                    <p class="pcol">“Lorem ipsum dolor sit ametolil col consectetur adipiscing lectus a nunc mauris scelerisque</p>
+                </div>
+                <div class="col row1_item">
+                    <aside>
+                        <article>
+                            <img src="./img/pers-2_1x.jpg" srscet="./img/pers-2_x.jpg 2x" alt="">
+                            <span>
+                                <p class="spp1">Sophie Moore</p>
+                                <p class="spp2">Hollywood Hills</p>
+                            </span>
+                        </article>
+                        <img src="./img/white.svg" alt="">
+                    </aside>
+                    <p class="pcol">“Lorem ipsum dolor sit ametolil col consectetur adipiscing lectus a nunc mauris scelerisque</p>
+                </div>
+                <div class="col row1_item">
+                    <aside>
+                        <article>
+                            <img src="./img/pers-3_1x.jpg" srscet="./img/pers-3_x.jpg 2x" alt="">
+                            <span>
+                                <p class="spp1">Matt Cannon</p>
+                                <p class="spp2">Little Tokyo</p>
+                            </span>
+                        </article>
+                        <img src="./img/white.svg" alt="">
+                    </aside>
+                    <p class="pcol">“Lorem ipsum dolor sit ametolil col consectetur adipiscing lectus a nunc mauris scelerisque</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section-muhammadimron-1">
+        <div class="container-fluid cont-fld">
+            <div class="row rov">
+                <div class="col-6 col6_1">
+                    <p class="col6-p">Start attracting more clients today!</p>
+                    <p class="col6-p2">Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit phasellus mollis sit aliquam sit nullam neque ultrices.</p>
+                    <button class="col6_1btn">
+                        Register restaurent
+                    </button>
+                </div>
+                <div class="col-6 col6_2">
+                    <img src="./img/sect-2_img-removebg-preview.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section-muhammadimron_2">
+        <div class="conatiner cont3">
+            <div class="row rov3">
+                <div class="col col3">
+                    <img src="./img/company logo.svg" alt="">
+                    <p class="col3p">Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor incididunt ut.</p>
+                </div>
+                <div class="col col3_4">
+                    <button class="col3btn1">Download for iOS</button>
+                    <button class="col3btn1">Download for Android</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="container hr_container">
+        <hr>
+    </div>
+    <footer>
+        <div class="container footer-container">
+            <div class="row footer-row">
+                <div class="col-6 footer-col-6">
+                    <div class="menu-box">
+                        <div class="ul_footer">
+                            <ul>
+                                <p>Menu</p>
+                                <li><a href="#Home">Home</a></li>
+                                <li><a href="#About">About</a></li>
+                                <li><a href="#Contact">Contact</a></li>
+                                <li><a href="#Blog">Blog</a></li>
+                                <li><a href="#Blog_posts">Blog posts</a></li>
+                            </ul>
+                            <ul>
+                                <li><a href="#Plans">Plans</a></li>
+                                <li><a href="#Plan_single">Plan single</a></li>
+                                <li><a href="#Register">Register</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <ul class="footer-col-6_ul">
+                        <p>Utility pages</p>
+                        <li><a href="#Start_here">Start here</a></li>
+                        <li><a href="#Styleguide">Styleguide</a></li>
+                        <li><a href="#Password_protected">Password protected</a></li>
+                        <li><a href="#404_Not_found">404 Not found</a></li>
+                        <li><a href="#Licenses">Licenses</a></li>
+                        <li><a href="#Changelog">Changelog</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 footer-col-6_2">
+                    <p>Available in</p>
+                    <div class="wrapper">
+                        <div>
+                            <span>
+                                <img src="./img/sanfrancisko.svg" alt="">
+                                <p class="footp">San Francisco, CA</p>
+                            </span>
+                            <span>
+                                <img src="./img/newyork.svg" alt="">
+                                <p class="footp">New York, NY</p>
+                            </span>
+                        </div>
+                        <div>
+                            <span>
+                                <img src="./img/losangeles.svg" alt="">
+                                <p class="footp">Los Angeles, CA</p>
+                            </span>
+                            <span>
+                                <img src="./img/seattle.svg" alt="">
+                                <p class="footp">Seattle, WA</p>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="./bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
